# final_project

./: pyproject.toml
app/authenticate/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py  0003_remove_user_is_admin_alter_user_is_superuser.py
app/core/: settings.py  urls.py
app/inventory/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/inventory/migrations/: 0001_initial.py
